# NeuralEngineLib

./: CMakeLists.txt  README.md
cmake/: AddComponentMacro.cmake  NeuralEngineLibConfig.cmake.in
include/NeuralEngineLib/: core.h  utils.h
includes/NeuralEngineLib/: backend.h  core.h
packaging/: CMakeLists.txt
src/: CMakeLists.txt  core.cpp
tests/: CMakeLists.txt  backend_test.cpp  core_test.cpp  utils_test.cpp
tests/cmake/: DefineComponentTestMacro.cmake  NeuralEngineLibTestMacros.cmake
